--- a/pyvenv.cfg
+++ b/pyvenv.cfg
@@ -1,5 +1,3 @@
-home = /opt/homebrew/opt/python@3.13/bin
+home = /Users/lucassantos/.pyenv/versions/3.10.13/bin
 include-system-site-packages = false
-version = 3.13.2
-executable = /opt/homebrew/Cellar/python@3.13/3.13.2/Frameworks/Python.framework/Versions/3.13/bin/python3.13
-command = /opt/homebrew/opt/python@3.13/bin/python3.13 -m venv /Users/lucassantos/Dev/python/recommendation-system
+version = 3.10.13
