--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 *.csv filter=lfs diff=lfs merge=lfs -text
 *.pkl filter=lfs diff=lfs merge=lfs -text
-backend/src/data/processed/*.parquet filter=lfs diff=lfs merge=lfs -text
+backend/src/data/data.tar.gz filter=lfs diff=lfs merge=lfs -text
 *.parquet filter=lfs diff=lfs merge=lfs -text
+*.gz filter=lfs diff=lfs merge=lfs -text
