--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 *.csv filter=lfs diff=lfs merge=lfs -text
 *.pkl filter=lfs diff=lfs merge=lfs -text
-backend/src/data/data.tar.gz filter=lfs diff=lfs merge=lfs -text
+backend/src/data.tar.gz filter=lfs diff=lfs merge=lfs -text
 *.gz filter=lfs diff=lfs merge=lfs -text
 *.parquet filter=lfs diff=lfs merge=lfs -text
